WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307191
[JSC] Fix startOfStructureHeap alignment RELEASE_ASSERT
https://bugs.webkit.org/show_bug.cgi?id=307191
Summary
[JSC] Fix startOfStructureHeap alignment RELEASE_ASSERT
Dan Hecht
Reported
2026-02-06 12:24:04 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-06 12:24:12 PST
<
rdar://problem/169822843
>
Dan Hecht
Comment 2
2026-02-06 12:27:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58071
EWS
Comment 3
2026-02-06 15:31:47 PST
Committed
306980@main
(47b52526fd42): <
https://commits.webkit.org/306980@main
> Reviewed commits have been landed. Closing PR #58071 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug