[JSC] Fix startOfStructureHeap alignment RELEASE_ASSERT https://bugs.webkit.org/show_bug.cgi?id=307191 rdar://169822843

Reviewed by Yusuke Suzuki and Mark Lam.

The intent of this assert is probably to verify that the returned address
is properly aligned. As currently written, the condition is true as
long as the address is greater than mappedHeapSize-1.

* Source/JavaScriptCore/heap/StructureAlignedMemoryAllocator.cpp:
(JSC::StructureMemoryManager::StructureMemoryManager):

Canonical link: https://commits.webkit.org/306980@main